$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-28 [A] Added user-contributed partially-translated Spanish language file {GauGau}
2010-03-27 [D] Various minor documentation improvements {GauGau}
2010-03-26 [A] Added plugin hook main_page_layout {GauGau}
2010-03-26 [B] Fixed wrong linked files counter for subcategories {eenemeenemuu}
2010-03-26 [B] Fixed category meta album issue with linked files (thread ID 64155) {eenemeenemuu}
2010-03-25 [B] Improved fix for IE and non-latin characters in album name (thread ID 64167) {Nibbler}
2010-03-25 [C] Fixed validation issue with javascript generated page navigation {timoswelt}
2010-03-25 [C] Always display arrow and delete icons in album manager {eenemeenemuu}
2010-03-25 [B] Fixed sidebar search (thread ID 64247) {eenemeenemuu}
2010-03-25 [C] Added missing greybox class to updater help {GauGau}
2010-03-24 [A] Added guest token. Fixes guests cannot enter file details issue (thread ID 62522) {eenemeenemuu}
2010-03-24 [B] Fixed issue with IE and non-latin characters in album name (thread ID 64167) {eenemeenemuu}
2010-03-24 [B] Fixed missing uniqid() parameter for users running PHP 4 (thread ID 64193) {eenemeenemuu}
2010-03-23 [B] Fixed empty list of available bridges in bridge manager when running PHP4 (thread ID 64220) {Nibbler}
2010-03-23 [B] Fixed missing album details for albums in sub categories (thread ID 64215) {eenemeenemuu}
2010-03-23 [M] Counted version number up from in file headers from cpg1.5.3 to cpg1.5.4 as a preparation for the next release {GauGau}
2010-03-22 [D] Updated visual appearance of plugin version checking routine {GauGau}