@@ -2159,62 +2159,65 @@ function theme_main_menu($which)
 
     $param = array(
         '{HOME_TGT}' => $CONFIG['home_target'],
-		'{HOME_ICO}' => cpg_fetch_icon('home', 1),
+        '{HOME_ICO}' => cpg_fetch_icon('home', 1),
         '{HOME_TITLE}' => $lang_main_menu['home_title'],
         '{HOME_LNK}' => $lang_main_menu['home_lnk'],
-        '{CONTACT_TGT}' => "contact.php?referer=$REFERER",
-		'{CONTACT_ICO}' => cpg_fetch_icon('contact', 1),
+        '{CONTACT_TGT}' => "contact.php",
+        '{CONTACT_ICO}' => cpg_fetch_icon('contact', 1),
         '{CONTACT_TITLE}' => sprintf($lang_main_menu['contact_title'], $CONFIG['gallery_name']),
         '{CONTACT_LNK}' => $lang_main_menu['contact_lnk'],
         '{MY_GAL_TGT}' => "index.php?cat=$my_gallery_id",
-		'{MY_GAL_ICO}' => cpg_fetch_icon('my_gallery', 1),
+        '{MY_GAL_ICO}' => cpg_fetch_icon('my_gallery', 1),
         '{MY_GAL_TITLE}' => $lang_main_menu['my_gal_title'],
         '{MY_GAL_LNK}' => $lang_main_menu['my_gal_lnk'],
         '{MEMBERLIST_TGT}' => "usermgr.php",
-		'{MEMBERLIST_ICO}' => cpg_fetch_icon('memberlist', 1),
+        '{MEMBERLIST_ICO}' => cpg_fetch_icon('memberlist', 1),
         '{MEMBERLIST_TITLE}' => $lang_main_menu['memberlist_title'],
         '{MEMBERLIST_LNK}' => $lang_main_menu['memberlist_lnk'],
         '{MY_PROF_TGT}' => "profile.php?op=edit_profile",
-		'{MY_PROF_ICO}' => cpg_fetch_icon('my_profile', 1),
+        '{MY_PROF_ICO}' => cpg_fetch_icon('my_profile', 1),
         '{MY_PROF_TITLE}' => $lang_main_menu['my_prof_title'],
         '{MY_PROF_LNK}' => $lang_main_menu['my_prof_lnk'],
         '{ADM_MODE_TGT}' => "mode.php?admin_mode=1&amp;referer=$REFERER",
-		'{ADM_MODE_ICO}' => cpg_fetch_icon('admin_mode_on', 1),
+        '{ADM_MODE_ICO}' => cpg_fetch_icon('admin_mode_on', 1),
         '{ADM_MODE_TITLE}' => $lang_main_menu['adm_mode_title'],
         '{ADM_MODE_LNK}' => $lang_main_menu['adm_mode_lnk'],
         '{USR_MODE_TGT}' => "mode.php?admin_mode=0&amp;referer=$REFERER",
-		'{USR_MODE_ICO}' => cpg_fetch_icon('admin_mode_off', 1),
+        '{USR_MODE_ICO}' => cpg_fetch_icon('admin_mode_off', 1),
         '{USR_MODE_TITLE}' => $lang_main_menu['usr_mode_title'],
         '{USR_MODE_LNK}' => $lang_main_menu['usr_mode_lnk'],
         '{SIDEBAR_TGT}' => "sidebar.php?action=install",
         '{SIDEBAR_TITLE}' => $lang_main_menu['sidebar_title'],
         '{SIDEBAR_LNK}' => $lang_main_menu['sidebar_lnk'],
-		'{SIDEBAR_ICO}' => cpg_fetch_icon('sidebar', 1),
+        '{SIDEBAR_ICO}' => cpg_fetch_icon('sidebar', 1),
         '{UPL_PIC_TGT}' => "upload.php$album_12",
         '{UPL_PIC_TITLE}' => $lang_main_menu['upload_pic_title'],
         '{UPL_PIC_LNK}' => $lang_main_menu['upload_pic_lnk'],
-		'{UPL_PIC_ICO}' => cpg_fetch_icon('upload', 1),
+        '{UPL_PIC_ICO}' => cpg_fetch_icon('upload', 1),
         '{REGISTER_TGT}' => "register.php",
         '{REGISTER_TITLE}' => $lang_main_menu['register_title'],
         '{REGISTER_LNK}' => $lang_main_menu['register_lnk'],
-		'{REGISTER_ICO}' => cpg_fetch_icon('add_user', 1),
+        '{REGISTER_ICO}' => cpg_fetch_icon('add_user', 1),
+        '{LOGIN_TGT}' => "login.php",
         '{LOGIN_TITLE}' => $lang_main_menu['login_title'],
         '{LOGIN_LNK}' => $lang_main_menu['login_lnk'],
-		'{LOGIN_ICO}' => cpg_fetch_icon('login', 1),
+        '{LOGIN_ICO}' => cpg_fetch_icon('login', 1),
         '{LOGOUT_TGT}' => "logout.php?form_token=$form_token&amp;timestamp=$timestamp&amp;referer=$REFERER",
         '{LOGOUT_TITLE}' => $lang_main_menu['logout_title'],
         '{LOGOUT_LNK}' => $lang_main_menu['logout_lnk'] . " [" . stripslashes(USER_NAME) . "]",
-		'{LOGOUT_ICO}' => cpg_fetch_icon('logout', 1),
+        '{LOGOUT_ICO}' => cpg_fetch_icon('logout', 1),
         '{UPL_APP_LNK}' => $lang_gallery_admin_menu['upl_app_lnk'],
         '{UPL_APP_TGT}' => "editpics.php?mode=upload_approval",
         '{UPL_APP_TITLE}' => $lang_gallery_admin_menu['upl_app_lnk'],
-		'{UPL_APP_ICO}' => cpg_fetch_icon('file_approval', 1),
+        '{UPL_APP_ICO}' => cpg_fetch_icon('file_approval', 1),
         );
-        
+
         if ($CPG_PHP_SELF != 'login.php') {
-            $param['{LOGIN_TGT}'] = "login.php?referer=$REFERER";
-        } else {
-            $param['{LOGIN_TGT}'] = "login.php";
+            $param['{LOGIN_TGT}'] .= "?referer=$REFERER";
+        }
+
+        if ($CPG_PHP_SELF != 'contact.php') {
+            $param['{CONTACT_TGT}'] .= "?referer=$REFERER";
         }
 
         $sys_menu = template_eval($template_sys_menu, $param);
@@ -2228,43 +2231,43 @@ function theme_main_menu($which)
         '{ALB_LIST_TGT}' => "index.php$cat_l",
         '{ALB_LIST_TITLE}' => $lang_main_menu['alb_list_title'],
         '{ALB_LIST_LNK}' => $lang_main_menu['alb_list_lnk'],
-		'{ALB_LIST_ICO}' => cpg_fetch_icon('alb_mgr', 1),
+        '{ALB_LIST_ICO}' => cpg_fetch_icon('alb_mgr', 1),
         '{CUSTOM_LNK_TGT}' => $CONFIG['custom_lnk_url'],
         '{CUSTOM_LNK_TITLE}' => $CONFIG['custom_lnk_name'],
         '{CUSTOM_LNK_LNK}' => $CONFIG['custom_lnk_name'],
-		'{CUSTOM_ICO}' => cpg_fetch_icon('online', 1),
+        '{CUSTOM_ICO}' => cpg_fetch_icon('online', 1),
         '{LASTUP_TGT}' => "thumbnails.php?album=lastup$cat_l2",
         '{LASTUP_TITLE}' => $lang_main_menu['lastup_title'],
         '{LASTUP_LNK}' => $lang_main_menu['lastup_lnk'],
-		'{LASTUP_ICO}' => cpg_fetch_icon('last_uploads', 1),
+        '{LASTUP_ICO}' => cpg_fetch_icon('last_uploads', 1),
         '{LASTCOM_TGT}' => "thumbnails.php?album=lastcom$cat_l2",
         '{LASTCOM_TITLE}' => $lang_main_menu['lastcom_title'],
         '{LASTCOM_LNK}' => $lang_main_menu['lastcom_lnk'],
-		'{LASTCOM_ICO}' => cpg_fetch_icon('comment', 1),
+        '{LASTCOM_ICO}' => cpg_fetch_icon('comment', 1),
         '{TOPN_TGT}' => "thumbnails.php?album=topn$cat_l2",
         '{TOPN_TITLE}' => $lang_main_menu['topn_title'],
         '{TOPN_LNK}' => $lang_main_menu['topn_lnk'],
-		'{TOPN_ICO}' => cpg_fetch_icon('most_viewed', 1),
+        '{TOPN_ICO}' => cpg_fetch_icon('most_viewed', 1),
         '{TOPRATED_TGT}' => "thumbnails.php?album=toprated$cat_l2",
         '{TOPRATED_TITLE}' => $lang_main_menu['toprated_title'],
         '{TOPRATED_LNK}' => $lang_main_menu['toprated_lnk'],
-		'{TOPRATED_ICO}' => cpg_fetch_icon('top_rated', 1),
+        '{TOPRATED_ICO}' => cpg_fetch_icon('top_rated', 1),
         '{FAV_TGT}' => "thumbnails.php?album=favpics",
         '{FAV_TITLE}' => $lang_main_menu['fav_title'],
         '{FAV_LNK}' => $lang_main_menu['fav_lnk'],
-		'{FAV_ICO}' => cpg_fetch_icon('favorites', 1),
+        '{FAV_ICO}' => cpg_fetch_icon('favorites', 1),
         '{BROWSEBYDATE_TGT}' => 'calendar.php',
         '{BROWSEBYDATE_LNK}' => $lang_main_menu['browse_by_date_lnk'],
         '{BROWSEBYDATE_TITLE}' => $lang_main_menu['browse_by_date_title'],
-		'{BROWSEBYDATE_ICO}' => cpg_fetch_icon('calendar', 1),
+        '{BROWSEBYDATE_ICO}' => cpg_fetch_icon('calendar', 1),
         '{SEARCH_TGT}' => "search.php",
         '{SEARCH_TITLE}' => $lang_main_menu['search_title'],
         '{SEARCH_LNK}' => $lang_main_menu['search_lnk'],
-		'{SEARCH_ICO}' => cpg_fetch_icon('search', 1),
+        '{SEARCH_ICO}' => cpg_fetch_icon('search', 1),
         '{UPL_APP_LNK}' => $lang_gallery_admin_menu['upl_app_lnk'],
         '{UPL_APP_TGT}' => "editpics.php?mode=upload_approval",
         '{UPL_APP_TITLE}' => $lang_gallery_admin_menu['upl_app_lnk'],
-		'{UPL_APP_ICO}' => cpg_fetch_icon('file_approval', 1),
+        '{UPL_APP_ICO}' => cpg_fetch_icon('file_approval', 1),
         );
     $sub_menu = template_eval($template_sub_menu, $param);
   }
